--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-pandas
-sentence-transformers
-chromadb==<compatible_version>
-
+pandas==2.2.3
+sentence-transformers==3.3.0
+chromadb==0.5.18  # Replace this with the correct version
